# cicero

./: .gcloudignore  .gitignore  .travis.yml  CHANGES.rst  Pipfile  README.md  README.rst  app.py  cicero.py  demo-mathjax.mkd  github_app.py  images.py  main.py  preview.py  preview_app.py  pyproject.toml  requirements.txt  setup.py  zappa_settings.json
.github/workflows/: deploy.yml  package.yml  test.yml
cicero/: __init__.py  app.py  cli.py  git.py  images.py  main.py  paths.py  preview.py  render.py  title.py  uwsgi.py  version.py
cicero/static/css/: app.css  cicero-custom.css  cicero.css  fonts.css
cicero/static/engines/remark-0.13.0/: body.html  (+6 more)
cicero/static/js/: app.js  cicero.js  github.js  high.js  highlighter.js  mathjax-setup.js
cicero/static/math/: mathjax-setup.js
cicero/static/search/: app.js
cicero/templates/: 404.html  base.html  engines  index.html  remark.html  render.html  slides.html
demo/remark/equations/: talk.md
demo/remark/header-footer/: talk.css  talk.md
demo/remark/original/: talk.css
demo/remark/simple/: talk.md
demo/remark/styling/: talk.css  talk.md
demo/reveal.js/: talk.md
doc/: api.rst  conf.py  export.rst  getting_started.rst  highlighting.rst  index.rst  local.rst  server.rst  simple-example.md  style.rst  templating.rst
doc/development/: dependencies.rst  env.rst
doc/maintenance/: dependencies.rst  env.rst
doc/remark/: background.rst  css.rst  highlighting.rst  images.rst
doc/style/: background.rst  css.rst  custom.rst  customize.rst  math.rst
templates/: 404.html  base.html  index.html  slides.html
(+16 files in other folders)
